# deprecated2

./: .gitignore  Dockerfile  LICENSE  Miniforge Prompt.lnk  README.md  apps - Shortcut.lnk  arena.py  astterr.py  atheory.py  boxy.bat  boxy2.bat  cfg1.wsb  demiurge.json  demiurge.py  demourge.py  ezquid.py  librarytrial.py  librarytrialer.py  main.py  namespace.py  newquid.py  package.json  post4.ps1  pyproject.toml  requirements.txt  rollout.ps1  rollout2.ps1  rollout3.ps1  sandboxxy2.bat  setup.py  skiquanttrial.py  terminal6.bat
.github/: dependabot.yml
.github/workflows/: main.yml
app/: app.py  mdjourney.py  process.py  proto_frame.py  stompy.py  ufs.py  ufs_broker.py
app/proto/: __init__.py  no_state_pipe.sh  p.py  pipetube.py  proto_frame.py  tube.py  vshell.py
app/tube/: __init__.py  pipe_tube.py  pipetube_path.py  tube_pipe.py
app/ufx/: ufx.py  ufx_tube.py
dev/: .bashrc  .env  .xonshrc  cfg.wsb  compute_locate.md  diy_llm_skim.py  diyllmdump.txt  output.md  testfiledir.py
dev/diy/: diyllmdump.txt
dev/docker/: Dockerfile
dev/docs/: cognitive_frame.md  cognosis_frame.yaml  how2install.md  meta_cog_process.yml  meta_prompt_object.md  prompt.json  prompt_creator.md  prompt_object_instruct.md  prompt_process.md  robots.md  simple_meta_yaml.md  workflows.md  wsl_install.md
dev/md_is4_robots/: master.md  md.md  md4robo.py
devenv/: cfg.wsb  rollout.ps1
devenv/docs/: LTM.md  how2install.md
src/: __init__.py  _representation.py  apiguy.py  app.py  cfs.sh  csplit.c  handle.py  lager.py  launch.py  linearregression.py  merkler.py  merktree.py  mro.py  own.py  repl.py  shuttle.py  supersimd.py  templater.py  tester.py  tree.py  ufx.py
src/.chatops/: bot.py
src/api/: __init__.py  apiguy.py  gollama.py  ollama.py  static_dantic.py
src/api/static/: README.md  __init__.py  api_def.yaml  api_definitions.md  api_definitions.toml
src/ebot/: bot.py
src/flash/: bot.py  kb.py  zettel.py
src/obs/: templater.py  tree.py
src/simple/: __init__.py  cfs.sh  nspace.py  superserial.py  update_file.py
src/simple/filesystem/: __init__.py  cat_ufx.py  create_replace.py  directory_bot.md  get_file.py  gittree.py  shell_bot.md  zettel.py
src/testflash/: tester.py
src/utils/: __init__.py  ubun.py  ufutils.py  ufx.py  wind.py
