[project]
name = "demiurge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
dev-dependencies = []
src-path = "src"
ffi-modules = []
profile-enabled = true

[project.platform-specific]
priority = 32  # Windows: 0x00000020, POSIX: nice value